# markov-junior

./: .gitignore  Cargo.toml  README.md  run.sh
src/: algo.rs  lib.rs  main.rs  models.rs  pattern.rs  rule.rs  rule_sequence.rs  sequence.rs  utils.rs  xml.rs
tests/: markov_junior.rs  markov_junior_pattern.rs  markov_junior_sequence.rs  pattern.rs
