[package]
name = "markov_junior"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8"
rand_chacha = "0.3.1"
roxmltree = "0.18.0"
pprof = { version = "0.11", features = ["flamegraph", "protobuf"] }

[features]
parallel = ["rayon"]

[dependencies.rayon]
version = "1.10.0"
optional = true

[profile.dev]
opt-level = 1

[profile.release]
debug = true
